--- a/A2.ipynb
+++ b/A2.ipynb
@@ -4,9 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Assignment 2 : Visualization On Map\n",
-    "* Name: Nikhil Bokade \n",
-    "* Roll No: CMS1902"
+    "# Visualization On Map\n"
    ]
   },
   {
